# ifcb-seabass2dwc

./: .gitignore  METADATA-TEMPLATE_ifcb-seabass2dwc.xlsx  README.md  pyproject.toml
scripts/: __init__.py  sb_to_dwc.py
